--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>GitHub Jobs</title>
+    <link rel="stylesheet" href="fonts/poppins/stylesheet.css">
+    <link rel="stylesheet" href="fonts/roboto/stylesheet.css">
+    <link rel="stylesheet" href="fonts/font-awesome/css/all.css">
+    <link rel="stylesheet" href="styles/main.css">
+</head>
+<body>
 
+  <div class="wrapper">
+      <header>
+          <a href=""><h1>Logo</h1></a>
+      </header>
+
+      <main>
+
+          <div class="banner">
+            <img src="images/banner.jpg" alt="Banner">
+          </div>
+
+      </main>
+
+      <footer>
+        <p>Todos los derechos reservados.</p>
+      </footer>
+  </div>
+    
+</body>
+</html>
