--- a/index.html
+++ b/index.html
@@ -1,34 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GitHub Jobs</title>
-    <link rel="stylesheet" href="fonts/poppins/stylesheet.css">
-    <link rel="stylesheet" href="fonts/roboto/stylesheet.css">
-    <link rel="stylesheet" href="fonts/font-awesome/css/all.css">
-    <link rel="stylesheet" href="styles/main.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>GitHub Maquetado</title>
+    <link rel="shortcut icon" href="images/favicon.png" />
+    <link rel="stylesheet" href="fonts/poppins/stylesheet.css" />
+    <link rel="stylesheet" href="fonts/roboto/stylesheet.css" />
+    <link rel="stylesheet" href="fonts/font-awesome/css/all.css" />
+    <link rel="stylesheet" href="styles/main.css" />
+  </head>
+  <body>
+    <div class="wrapper">
 
-  <div class="wrapper">
       <header>
-          <a href=""><h1>Logo</h1></a>
+        <a href=""><h1>Logo</h1></a>
       </header>
 
       <main>
-
-          <div class="banner">
-            <img src="images/banner.jpg" alt="Banner">
-          </div>
-
+        <h1>CONTENIDO</h1>
       </main>
 
       <footer>
-        <p>Todos los derechos reservados.</p>
+        <p>Todos los derechos reservados. 2021</p>
       </footer>
-  </div>
-    
-</body>
+      
+    </div>
+  </body>
 </html>
