--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GitHub Maquetado</title>
+    <title>GitHub</title>
     <link rel="shortcut icon" href="images/favicon.png" />
     <link rel="stylesheet" href="fonts/poppins/stylesheet.css" />
     <link rel="stylesheet" href="fonts/roboto/stylesheet.css" />
@@ -25,7 +25,7 @@
       <footer>
         <p>Todos los derechos reservados. 2021</p>
       </footer>
-      
+
     </div>
   </body>
 </html>
