--- a/index.html
+++ b/index.html
@@ -14,16 +14,24 @@
   <body>
     <div class="wrapper">
 
-      <header>
-        <a href=""><h1>Logo</h1></a>
+      <header class="header">
+        <a href="index.html" class="brand">Brand</a>
+        <nav class="nav">
+          <ul>
+            <li class="is-active"><a href="">Home</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">Services</a></li>
+            <li><a href="">Contact</a></li>
+          </ul>
+        </nav>
       </header>
 
-      <main>
+      <main class="main">
         <h1>CONTENIDO</h1>
       </main>
 
-      <footer>
-        <p>Todos los derechos reservados. 2021</p>
+      <footer class="footer">
+        <p>Todos los Derechos Reservados - 2021</p>
       </footer>
 
     </div>
